@@ -8,6 +8,8 @@
 - The `ComplexField` and `SimdComplexField` (and, by extension, `RealField` and `SimdRealField`) traits now depend on the
   `SupersetOf<f32>` trait in addition to `SupersetOf<f64>`.
 - Replace the `SimdValue::lanes()` function by an associated constant `SimdValue::LANES`.
+- Add `ZERO` and `ONE` associated consts to all the simd newtypes.
+- Implement `Default` for all simd newtypes.
 
 ## Release v0.8.1 (04 Apr. 2023)
 - Add implementation of `rkyv` serialization/deserialization to the `Wide*` wrapper types.
